tests/sksl/errors/FunctionParamShadowedByLocal.glsl
### Compilation failed:

error: 2: symbol 'var' was already defined
    int var;
    ^^^^^^^
1 error
